add gen minecraft.cmd fix run (space symbol)